# sodium

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  SODIUM-USER-GUIDE.md  VERSION  deploy.sh  git.sh
.claude/: settings.local.json
docs/: git-sodium-2026-02-23.md  git-sodium-2026-03-06.md
src/: api.rs  app.rs  audit.rs  cli.rs  config.rs  git.rs  git_ops.rs  main.rs  theme.rs  ui.rs
