[package]
name = "sodium"
version = "0.1.0"
edition = "2021"
description = "Git TUI dashboard — dark ops style"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
git2 = "0.19"
color-eyre = "0.6"
chrono = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5"

[profile.release]
opt-level = "z"
lto = true
strip = true
