[package]
name = "sodium"
version = "26.2.24"
edition = "2021"
description = "Git TUI dashboard — dark ops style"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
git2 = "0.19"
color-eyre = "0.6"
chrono = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"

[profile.release]
opt-level = "z"
lto = true
strip = true
